# eo-sandbox

./: README.md  pyproject.toml
notebooks/: aws-sentinel2-pystac.ipynb
