[tool.poetry]
name = "eo-sandbox"
version = "0.1.0"
description = "Earth Observation and remote sensing examples"
authors = ["Jiri Klic <web@jiriklic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
