[tool.poetry]
name = "eo-sandbox"
version = "0.1.0"
description = "Earth Observation and remote sensing examples"
authors = ["Jiri Klic <web@jiriklic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rasterio = "^1.3.0"
Shapely = "^1.8.2"
boto3 = "^1.24.32"
smart-open = "^6.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
folium = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
